--- a/pom.xml
+++ b/pom.xml
@@ -14,4 +14,11 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
+    <distributionManagement>
+        <repository>
+            <id>github</id>
+            <name>GitHub Alessandro-Salerno Apache Maven Packages</name>
+            <url>https://maven.pkg.github.com/Alessandro-Salerno/Gendarme</url>
+        </repository>
+    </distributionManagement>
 </project>
